--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
